# Rust_basics

./: Cargo.toml
src/: Loops.rs  Ownership.rs  conditionals.rs  control_flow.rs  data_types.rs  fizz_buzz_functions.rs  functions.rs  functions_methods.rs  generic_type.rs  generic_types_excercices.rs  input_data.rs  main.rs  variables_mutability.rs
